<resources>
    <string name="app_name">Savchuk_36Бд_var1</string>
    <string name="welcome">Welcome Back</string>
    <string name="log_Google">Log in with Google</string>
    <string name="log_Git">Log in with GitHub</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep">Keep me signed in</string>
    <string name="forgot">Forgot password</string>
    <string name="signin">Sign In</string>
</resources>