<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15pt"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10pt" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5px"
                android:background="@color/bg_log_butt"
                android:paddingLeft="5pt"
                android:paddingRight="5pt"
                android:text="@string/log_Google"
                android:textSize="10pt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10pt" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_log_butt"
                android:padding="5pt"
                android:text="@string/log_Git"
                android:textSize="10pt"
                android:paddingLeft="5pt"
                android:paddingRight="5pt"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10pt" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:textAlignment="inherit">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10pt"
                android:layout_weight="1" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:textSize="2sp" />

            <Space
                android:layout_width="5pt"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <Space
                android:layout_width="5pt"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:textSize="2sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10pt"
                android:layout_weight="1" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10pt" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="20pt"
            android:background="@drawable/button1"
            android:ems="10"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:padding="2pt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10pt" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="20pt"
            android:background="@drawable/button1"
            android:ems="10"
            android:hint="@string/password"

            android:inputType="numberPassword"
            android:padding="2pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep"
                android:textColor="@color/black" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10pt" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_signin_butt"
            android:padding="5pt"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="9pt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

